# bloom-filter-index

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  README.md  bfi.doxyfile.in  bloom_filter_indexes.spec.in  bootstrap.sh  configure.ac
include/: Makefile.am  bf_index.h
src/: BloomFilter.hpp  Makefile.am  bf_index.c  bf_index_internal.h  bloomf_wrapper.cpp  bloomf_wrapper.h
